fix: folder structure for the mock controller
